--- a/webapp/src/ionicapp/www/templates/confirmPhoneNumber.html
+++ b/webapp/src/ionicapp/www/templates/confirmPhoneNumber.html
@@ -1,7 +1,7 @@
 <ion-view title="Confirm Phone Number" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page23" class="page_width_small">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <div class="spacer" style="height: 20px;"></div>
-    <h3 id="confirmPhoneNumber-heading10" style="color:#444444;text-align:center;">Confirm Phone Number</h3>
+    <h3 id="confirmPhoneNumber-heading10" style="color:#3C5A99;text-align:center;">Confirm Phone Number</h3>
     <div class="spacer" style="height: 10px;"></div>
     <form id="confirmPhoneNumber-form20" class="list">
       <div id="confirmPhoneNumber-markdown15" style="text-align:center;" class="show-list-numbers-and-dots">
