--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -8,31 +8,42 @@
     </ion-nav-bar>
     <ion-nav-view name="side-menu21"></ion-nav-view>
   </ion-side-menu-content>
-  <ion-side-menu side="left" id="side-menu21" style="background-color:#3C5A99;">
+  <ion-side-menu side="left" id="side-menu21" style="background-color:#FFFFFF;">
     <ion-content padding="false" style="top:0px !important;" class="side-menu-left ">
       <div class="spacer" style="width: 268px; height: 34px;"></div>
       <div id="menu-markdown8" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#FFFFFF;font-size:17px;">
+        <p style="color:#3C5A99;font-size:17px;">
           <strong> {{ data.name }} </strong>
         </p>
       </div>
       <ion-list id="menu-list1" class="manual-list-fullwidth">
-        <ion-item class="item-icon-left positive" id="menu-list-item2" ui-sref="menu.account({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
-          <i class="icon ion-person"></i>Account</ion-item>
-        <ion-item class="item-icon-left positive" id="menu-list-item1" ui-sref="menu.devices({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item2" ui-sref="menu.profile({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+          <i class="icon ion-person"></i>Profile</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.account({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-android-settings"></i>Account</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item1" ui-sref="menu.devices({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
           <i class="icon ion-ios-keypad"></i>Devices</ion-item>
-        <ion-item class="item-icon-left positive" id="menu-list-item18" ui-sref="menu.notification({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
-          <i class="icon ion-android-checkbox-outline"></i>Notifications</ion-item>
-        <ion-item class="item-icon-left positive" id="menu-list-item6" ui-sref="menu.history({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item8" ui-sref="menu.sensorDashboard({&quot;devicename&quot;:&quot;All devices&quot;,&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;,&quot;devicestatus&quot;:&quot;&quot;,&quot;deviceid&quot;:&quot;&quot;,&quot;serialnumber&quot;:&quot;&quot;,&quot;location&quot;:&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-arrow-graph-up-right"></i>Dashboard</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item18" ui-sref="menu.notification({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-alert-circled"></i>Alerts</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item6" ui-sref="menu.history({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
           <i class="icon ion-android-clipboard"></i>History</ion-item>
-        <ion-item class="item-icon-left positive" id="menu-list-item4" ui-sref="menu.helpSupport({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item4" ui-sref="menu.helpSupport({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
           <i class="icon ion-help-circled"></i>Help &amp; Support</ion-item>
-        <ion-item class="item-icon-left positive" id="menu-list-item17" ui-sref="menu.about({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item17" ui-sref="menu.about({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-settings"></i>About</ion-item>
-        <ion-item class="item-icon-left positive" id="menu-list-item5" ui-sref="menu.feedback({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item5" ui-sref="menu.feedback({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
           <i class="icon ion-android-checkbox-outline"></i>Feedback</ion-item>
-        <ion-item class="item-icon-left positive" id="menu-list-item3" ng-click="submitLogout()">
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item3" ng-click="submitLogout()">
           <i class="icon ion-log-out"></i>Logout</ion-item>
       </ion-list>
     </ion-content>
