--- a/webapp/src/ionicapp/www/templates/recover.html
+++ b/webapp/src/ionicapp/www/templates/recover.html
@@ -1,7 +1,7 @@
 <ion-view title="Recover" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page7" class="page_width_small">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <div class="spacer" style="height: 20px;"></div>
-    <h3 id="recover-heading7" style="color:#444444;text-align:center;">Forgot password</h3>
+    <h3 id="recover-heading7" style="color:#3C5A99;text-align:center;">Forgot password</h3>
     <div class="spacer" style="height: 10px;"></div>
     <div id="recover-markdown32" class="show-list-numbers-and-dots">
       <p style="color:#000000;">Enter your email address</p>
