--- a/webapp/src/ionicapp/www/templates/sensorDashboard.html
+++ b/webapp/src/ionicapp/www/templates/sensorDashboard.html
@@ -1,4 +1,4 @@
-<ion-view title="Sensor Dashboard" hide-back-button="true" cache-view="false" nav-transition="none" id="page17" class="page_width">
+<ion-view title="Sensor Dashboard" hide-back-button="true" nav-transition="none" id="page17" class="page_width">
   <ion-nav-buttons side="left" class="has-header">
     <button class="button button-icon icon ion-android-close" ng-click="submitExit()"></button>
   </ion-nav-buttons>
