--- a/webapp/src/ionicapp/www/templates/device.html
+++ b/webapp/src/ionicapp/www/templates/device.html
@@ -1,4 +1,4 @@
-<ion-view title="Device" hide-back-button="true" nav-transition="none" id="page15" class="page_width">
+<ion-view title="Device" hide-back-button="true" nav-transition="none" id="page15" style="background-color:#FFFFFF;" class="page_width">
   <ion-nav-buttons side="left" class="has-header">
     <button class="button button-icon icon ion-android-close" ng-click="exitPage()"></button>
   </ion-nav-buttons>
@@ -7,34 +7,55 @@
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <button id="device-button43" ng-click="getDevice(data.devicename)" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear icon-right ion-android-settings">{{ data.devicename }}</button>
-    <div id="device-markdown30" ng-click="viewDeviceLocation(data)" style="text-align:center;" class="show-list-numbers-and-dots line_spacing">
-      <p style="color:#444444;font-size:12px;">UUID: {{ data.deviceid }}</p>
-
-      <p style="color:#444444;font-size:12px;">Serial Number: {{ data.serialnumber }}</p>
-
-      <p style="color:#444444;font-size:12px;">Firmware Version: {{ data.deviceversion }}</p>
-
-      <p style="color:#444444;font-size:12px;">Status: {{ data.status }}</p>
-
-      <p style="color:#444444;font-size:12px;">Location: {{ data.devicelocation }}</p>
+    <div id="device-container24">
+      <div id="device-markdown454" class="show-list-numbers-and-dots device_info_top">
+        <p style="color:#444444;font-size:12px;">UUID</p>
+      </div>
+      <div id="device-markdown455" class="show-list-numbers-and-dots device_info_top_ex">
+        <p style="color:#444444;font-size:12px;">{{ data.deviceid }}</p>
+      </div>
+      <div id="device-markdown456" class="show-list-numbers-and-dots device_info_top">
+        <p style="color:#444444;font-size:12px;">Serial Number</p>
+      </div>
+      <div id="device-markdown457" class="show-list-numbers-and-dots device_info_top_ex">
+        <p style="color:#444444;font-size:12px;">{{ data.serialnumber }}</p>
+      </div>
+      <div id="device-markdown460" class="show-list-numbers-and-dots device_info_top">
+        <p style="color:#444444;font-size:12px;">Firmware Version</p>
+      </div>
+      <div id="device-markdown461" class="show-list-numbers-and-dots device_info_top_ex">
+        <p style="color:#444444;font-size:12px;">{{ data.deviceversion }}</p>
+      </div>
+      <div id="device-markdown462" class="show-list-numbers-and-dots device_info_top">
+        <p style="color:#444444;font-size:12px;">Status</p>
+      </div>
+      <div id="device-markdown463" class="show-list-numbers-and-dots device_info_top_ex">
+        <p style="color:#444444;font-size:12px;">{{ data.status != "Online" &amp;&amp; data.status != "Offline" ? "Please wait..." : data.status }}</p>
+      </div>
+      <div id="device-markdown464" ng-click="viewDeviceLocation(data)" class="show-list-numbers-and-dots device_info_top">
+        <p style="color:#444444;font-size:12px;">Location</p>
+      </div>
+      <div id="device-markdown465" ng-click="viewDeviceLocation(data)" class="show-list-numbers-and-dots device_info_top_ex">
+        <p style="color:#444444;font-size:12px;">{{ data.devicelocation }}</p>
+      </div>
     </div>
-    <div class="spacer" style="height: 15px;"></div>
+    <div class="spacer" style="height: 20px;"></div>
     <div id="device-markdown297" class="show-list-numbers-and-dots line_spacing">
-      <p style="color:#BBBBBB;font-size:12px;">View Device Peripherals Data</p>
+      <p style="color:#BBBBBB;font-size:11px;">View Device Peripherals Data</p>
     </div>
-    <button id="device-button132" ng-click="submitDashboard()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-positive button-large widget_button_ex">Sensor Dashboard</button>
-    <div class="spacer" style="height: 7px;"></div>
+    <button id="device-button132" ng-click="submitDashboard()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-block">Sensor Dashboard</button>
+    <div class="spacer" style="height: 15px;"></div>
     <div id="device-markdown296" class="show-list-numbers-and-dots line_spacing">
-      <p style="color:#BBBBBB;font-size:12px;">Configure Device Peripherals</p>
+      <p style="color:#BBBBBB;font-size:11px;">Configure Device Peripherals</p>
     </div>
-    <button id="device-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-positive button-large button-outline widget_button">UART</button>
-    <button id="device-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-positive button-large button-outline widget_button">GPIO</button>
+    <button id="device-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-outline widget_button_half">UART</button>
+    <button id="device-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-outline widget_button_half">GPIO</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
-    <button id="device-button18" ng-click="submitI2C()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-positive button-large button-outline widget_button">I2C</button>
-    <button id="device-button58" ng-click="submitADC()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-positive button-large button-outline widget_button">ADC</button>
+    <button id="device-button18" ng-click="submitI2C()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-outline widget_button_half">I2C</button>
+    <button id="device-button58" ng-click="submitADC()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-outline widget_button_half">ADC</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
-    <button id="device-button59" ng-click="submit1WIRE()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-positive button-large button-outline widget_button">OneWire</button>
-    <button id="device-button74" ng-click="submitTPROBE()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-positive button-large button-outline widget_button">TProbe</button>
+    <button id="device-button59" ng-click="submit1WIRE()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-outline widget_button_half">OneWire</button>
+    <button id="device-button74" ng-click="submitTPROBE()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-outline widget_button_half">TProbe</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
   </ion-content>
 </ion-view>
