--- a/webapp/src/ionicapp/www/templates/signup.html
+++ b/webapp/src/ionicapp/www/templates/signup.html
@@ -1,7 +1,7 @@
 <ion-view title="Signup" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page6" class="page_width_small">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <div class="spacer" style="width: 300px; height: 20px;"></div>
-    <h3 id="signup-heading6" style="color:#444444;">Sign Up</h3>
+    <h3 id="signup-heading6" style="color:#3C5A99;">Sign Up</h3>
     <div class="spacer" style="height: 10px;"></div>
     <form id="signup-form9" class="list">
       <ion-list id="signup-list4">
