--- a/webapp/src/ionicapp/www/templates/about.html
+++ b/webapp/src/ionicapp/www/templates/about.html
@@ -3,5 +3,14 @@
     <button id="about-button47" ng-click="getTermsAndConditions()" style="font-size:16px;text-align:left;" class="button button-positive button-large button-block button-outline icon-right ion-android-arrow-dropright">Terms and Conditions</button>
     <button id="about-button65" ng-click="getPrivacyStatements()" style="font-size:16px;text-align:left;" class="button button-positive button-large button-block button-outline icon-right ion-android-arrow-dropright">Privacy Statements</button>
     <button id="about-button66" ng-click="getLicense()" style="font-size:16px;text-align:left;" class="button button-positive button-large button-block button-outline icon-right ion-android-arrow-dropright">License</button>
+    <div class="spacer" style="width: 300px; height: 175px;"></div>
+    <div id="about-markdown296" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#3C5A99;font-size:16px;">
+        <strong> IoT Modem </strong>
+      </p>
+    </div>
+    <div id="about-markdown297" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#444444;font-size:12px;">Version 0.3</p>
+    </div>
   </ion-content>
 </ion-view>
