--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -18,31 +18,31 @@
       </div>
       <ion-list id="menu-list1" class="manual-list-fullwidth">
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item2" ui-sref="menu.profile({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
-          <i class="icon ion-person"></i>Profile</ion-item>
+          <i class="icon ion-ios-contact"></i>Profile</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.account({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-android-settings"></i>Account</ion-item>
+          <i class="icon ion-ios-cog"></i>Account</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item1" ui-sref="menu.devices({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-ios-keypad"></i>Devices</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item8" ui-sref="menu.sensorDashboard({&quot;devicename&quot;:&quot;All devices&quot;,&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;,&quot;devicestatus&quot;:&quot;&quot;,&quot;deviceid&quot;:&quot;&quot;,&quot;serialnumber&quot;:&quot;&quot;,&quot;location&quot;:&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-arrow-graph-up-right"></i>Dashboard</ion-item>
-        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item18" ui-sref="menu.notification({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          <i class="icon ion-ios-analytics"></i>Dashboard</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item18" ui-sref="menu.alerts({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-alert-circled"></i>Alerts</ion-item>
-        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item6" ui-sref="menu.history({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item6" ui-sref="menu.troubleshooting({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-android-clipboard"></i>History</ion-item>
+          <i class="icon ion-ios-briefcase"></i>Troubleshooting</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item4" ui-sref="menu.helpSupport({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-help-circled"></i>Help &amp; Support</ion-item>
+          <i class="icon ion-ios-help"></i>Help &amp; Support</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item17" ui-sref="menu.about({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-settings"></i>About</ion-item>
+          <i class="icon ion-ios-information"></i>About</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item5" ui-sref="menu.feedback({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-android-checkbox-outline"></i>Feedback</ion-item>
+          <i class="icon ion-ios-compose"></i>Feedback</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item3" ng-click="submitLogout()">
           <i class="icon ion-log-out"></i>Logout</ion-item>
       </ion-list>
